# AI-Trading-Agent

./: .coveragerc  .env  .env.example  .gitignore  .netlifyignore  AI_Crypto_Trading_Agent_Plan.docx  ARCHITECTURE.md  BITVAVO_INTEGRATION.md  CONFIG_MANAGEMENT.md  DASHBOARD_INSTRUCTIONS.md  Dockerfile  Dockerfile.minimal  Makefile  PLAN.md  PROJECT_STANDARDS.md  README.md  README_AGENT.md  README_REAL_DATA.md  REAL_DATA_INTEGRATION.md  SENTIMENT_IMPLEMENTATION_SUMMARY.md  TWITTER_SETUP.md  add_bitvavo_menu.js  add_bitvavo_routes.py  ai_trading_agent.db  alembic.ini  analytics_plugin_framework.py  api_connectivity_results.json  api_fix.py  api_keys.json.template  api_server.py  apply_bitvavo_menu.py  apply_bitvavo_routes.py  apply_monitoring_dashboard.py  backtest_results.json  basic_autonomous_demo.py  basic_health_test.py  basic_test.py  btcusdc_single_pair_test.py  btcusdc_validation.py  build_rust_extensions.py  (+325 more)
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.venv_py311/: pyvenv.cfg
ai_trading_agent/: README_TECHNICAL_ANALYSIS.md  agent_orchestrator.py  backtesting_engine.py  cffi_loader.py  common.py  config.py  event_bus.py  indicators.py  main.py  market_data.py  runner.py  rust_extensions.py
ai_trading_agent_improvements/: INSTRUCTIONS_FOR_AI_DEV.md
alembic/: env.py
archive/: README.md
backend/: .env.example  __init__.py  alpha_vantage.py  api.py  job_queue.py  paper_trading.py  system_control.py
config/: README.md  agent_config_template.yaml  analysis_agents.yaml  config.json  config.yaml  dashboard_settings.json  data_collection.yaml  decision_engine.yaml  early_detection.yaml  exchanges.yaml  execution.yaml  orderbook_strategies.yaml  override.yaml  paper_trading_config.yaml  parameter_spaces.json  personality.json  plugins.json  portfolio.yaml  real_data_config.json  security.yaml  sentiment_analysis.yaml  strategies.json  strategies.yaml  system.json  system.yaml  trading_config.yaml
dashboard/: package-lock.json  package.json  requirements.txt  sentiment_dashboard.py
dashboard_templates/: index.html  llm_event_dashboard.html  risk_management.html  sentiment_dashboard.html
data/: AAPL_ohlcv.csv  AAPL_ohlcv_1d.csv  GOOG_ohlcv_1d.csv  MSFT_ohlcv.csv  MSFT_ohlcv_1d.csv  backtest_portfolio_history.csv  backtest_results.json  sample_sentiment_data.csv  synthetic_sentiment.csv
debug_results/: market_data_debug_1749077556.json
deployments/: deployment_config_dev.yaml  deployment_config_prod.yaml
devops/: ci_cd_config.yaml  deploy-production.sh  deploy.sh  test_deployment.sh
docker/: Dockerfile.agent  Dockerfile.api  Dockerfile.dashboard  Dockerfile.oversight  nginx.conf
docs/: ADVANCED_DATA_VALIDATION.md  AUTOMATIC_STOPPING_CRITERIA.md  CI_CD_SETUP.md  COMPREHENSIVE_ADMIN_CONTROLS.md  CONFIGURATION.md  CONNECTION_ENGINE.md  CONTINUOUS_IMPROVEMENT_PLAN.md  CONTINUOUS_IMPROVEMENT_SYSTEM.md  CONTINUOUS_IMPROVEMENT_UPDATES.md  DASHBOARD_ARCHITECTURE.md  DASHBOARD_ENHANCEMENTS.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_MODULARITY.md  DASHBOARD_REDESIGN_PLAN.md  DATA_TRANSFORMATION_PIPELINE.md  DEVELOPMENT_SETUP.md  DOCKER_SETUP.md  DOCUMENTATION_MAINTENANCE.md  EARLY_EVENT_DETECTION_SYSTEM.md  GEOPOLITICAL_ANALYZER.md  IMPROVEMENT_CHECKLIST.md  LLM_INTEGRATION_PLAN.md  MODERN_DASHBOARD_GUIDE.md  NEWS_ANALYZER.md  PERFORMANCE_OPTIMIZATION.md  PLAN.md  PLAN.md.backup  PLAN.md.new  PRODUCTION_DEPLOYMENT.md  PROJECT_SUMMARY.md  PROVIDER_FAILOVER_SYSTEM.md  REAL_DATA_CONNECTIONS.md  REAL_DATA_IMPLEMENTATION_PLAN.md  REAL_DATA_INTEGRATION_MASTER_PLAN.md  REAL_DATA_PHASE2_TECHNICAL_SPECS.md  REAL_DATA_PHASE3_PLANNING.md  REAL_TIME_UPDATES.md  RUST_OPTIMIZATION.md  RUST_OPTIMIZATION_GUIDE.md  SENTIMENT_ANALYSIS_GUIDE.md  (+68 more)
end_to_end_test_results/: end_to_end_test_report.html
examples/: README.md  README_binance_demo.md  ab_testing_demo.py  adaptive_system_mock_test.py  adaptive_system_test.py  advanced_logging_example.py  advanced_sentiment_strategy_demo.py  advanced_sentiment_trading_example.py  agent_architecture_example.py  ai_trading_agent_demo.py  alerts_example.py  alerts_notification_bridge.py  alerts_standalone.py  alpha_vantage_sentiment_integration.py  api_key_management_example.py  backtest_example.py  benchmark_backtest.py  benchmark_orderbook.py  binance_connector_demo.py  check_credentials.py  coinbase_demo.py  comprehensive_risk_management_demo.py  config_schema_example.py  consensus_sentiment_demo.py  continuous_improvement_demo.py  crypto_news_categorization_example.py  cryptocompare_news_example.py  dynamic_risk_limits_demo.py  early_event_detection_demo.py  enhanced_ml_strategy_demo.py  enhanced_price_prediction_example.py  enhanced_sentiment_strategy_demo.py  enhanced_sentiment_trading_strategy.py  exchange_comparison.py  exchange_connector_example.py  execution_algorithms_demo.py  fear_greed_index_demo.py  feature_engineering_demo.py  fee_management_example.py  fee_visualization.py  (+65 more)
frontend/: .env.example  Dockerfile  Dockerfile.dev  (+14 more)
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/backtesting/: engine.rs  mod.rs
rust/src/market_data/: mod.rs  models.rs  processor.rs
rust/src/python/: backtesting.rs  market_data.rs  mod.rs  sentiment.rs  technical.rs
rust/src/sentiment/: continuous_improvement.rs  mod.rs
rust/src/technical/: indicators.rs  mod.rs
rust_extensions/: Cargo.toml  pyproject.toml
rust_extensions/src/: advanced_features.rs  backtesting.rs  c_api.rs  features.rs  lag_features.rs  lib.rs  moving_averages.rs
(+1697 files in other folders)
