[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "ai_trading_agent_rs"
version = "0.1.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ai_trading_agent.rust_extensions"
manifest-path = "rust_extensions/Cargo.toml"
