[build-system]
requires = ["setuptools>=42", "setuptools-rust>=0.12", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_trading_agent_rs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "vaderSentiment",
    "pandas",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "praw (>=7.8.1,<8.0.0) ; python_version >= \"3.11\" and python_version < \"4.0\""
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["ai_trading_agent"]

[tool.setuptools_rust]
rust-extensions = [
    {path = "rust_extensions", binding = "pyo3", features = ["extension-module"]}
]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
plotly = "^5.22.0"
pandas = "^2.2.2"
vaderSentiment = "^3.3.2"

# Specify the package location
[[tool.poetry.packages]]
include = "ai_trading_agent"
