[package]
name = "crypto_trading_engine"
version = "0.1.0"
edition = "2021"
authors = ["AI Trading System Team"]
description = "High-performance components for the AI Crypto Trading System"

[lib]
name = "crypto_trading_engine"
# Both a Rust library and a Python module
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.30", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
tokio = { version = "1.29", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# Technical analysis
ta = "0.5"  # Technical analysis library for Rust

# Python bindings
pyo3 = { version = "0.19", features = ["extension-module", "chrono"] }
numpy = { version = "0.19", features = ["nalgebra"] }

# Market data
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Optimizations
rayon = "1.7"  # Parallel computation
dashmap = "5.5"  # Concurrent hashmap

[dev-dependencies]
criterion = "0.5"
rstest = "0.18"
mockall = "0.11"

[[bench]]
name = "technical_benchmarks"
harness = false

[profile.release]
lto = true  # Link-time optimization
codegen-units = 1  # Optimize for maximum performance
opt-level = 3  # Maximum optimization level
panic = "abort"  # Remove stack unwinding for panics in release mode 