[package]
name = "ai_trading_agent_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_trading_agent_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.1", features = ["extension-module", "serde"] }
ta = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = { version = "0.15.6", features = ["serde"] }
numpy = "0.22.0"