[package]
name = "ai_trading_agent_rs"
version = "0.1.0"
edition = "2021"
description = "Rust extensions for AI Trading Agent"

[lib]
name = "ai_trading_agent_rs"
crate-type = ["cdylib"]

[dependencies]
ta = "0.5.0"
num-traits = "0.2.15"
# rayon = "1.7.0"
pyo3 = { version = "0.22.1", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]